# fp-lapse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: adding-a-camera.md  reference.md  user-guide.md
docs/mockups/: render_mockups.py
scripts/: check_camera.py  demo_buttons.py  demo_display.py  e2e_smoke.py
src/fp_lapse/: __init__.py  __main__.py  _compat.py  _tk_root.py  app.py  bracket.py  camera_health.py  config.py  configs.py  control_server.py  engine.py  engine_scheduler.py  logging_setup.py  shutdown.py  shutter.py
src/fp_lapse/buttons/: __init__.py  fake.py  gpio.py  iface.py  mock.py
src/fp_lapse/camera/: __init__.py  detect.py  iface.py  mock.py  nikon_gphoto.py  nikon_values.py  proxy.py  sigma_fp.py
src/fp_lapse/display/: __init__.py  fake.py  framebuffer.py  iface.py  mock.py
src/fp_lapse/net/: __init__.py  nmcli.py
src/fp_lapse/schedule/: __init__.py  moment.py  schedule_evaluator.py  store.py  time_sync_prober.py  trusted_clock.py
src/fp_lapse/ui/: __init__.py  bracket_screen.py  edit_screen.py  edit_values.py  fonts.py  keyboard.py  main_screen.py  manage_menu.py  overlays.py  picker_datetime.py  picker_validate.py  schedule_indicator.py  shutdown_screen.py  theme.py  time_setup_menu.py  widgets.py  wifi_screen.py
systemd/: fp-lapse.service
tests/: test_app.py  test_app_wifi.py  test_bracket.py  test_buttons_fake.py  test_camera_health.py  test_camera_mock.py  test_camera_proxy.py  test_configs.py  test_control_server.py  test_detect.py  test_display_fake.py  test_display_framebuffer.py  test_engine.py  test_engine_scheduler.py  test_engine_scheduler_async.py  test_main_wiring.py  test_net_nmcli.py  test_nikon_gphoto.py  test_nikon_values.py  test_safe_shutdown.py  test_schedule_evaluator.py  test_schedule_moment.py  test_schedule_store.py  test_schedule_time_sync_prober.py  test_schedule_trusted_clock.py  test_shutter.py  test_sigma_fp_dispatch.py  test_ui_bracket_screen.py  test_ui_edit_screen.py  test_ui_edit_values.py  test_ui_interaction.py  test_ui_keyboard.py  test_ui_main_screen.py  test_ui_manage_menu.py  test_ui_overlays.py  test_ui_picker_datetime.py  test_ui_schedule_indicator.py  test_ui_shutdown_screen.py  test_ui_status_bar.py  test_ui_time_setup_menu.py  (+1 more)
